Increase story line height to avoid overlaping of spans when there're multiple lines with special styling

--- a/data/style.css
+++ b/data/style.css
@@ -141,6 +141,7 @@ body {
     border-radius: 5px;
     width:100%;
     margin-top: 10px;
+    line-height: 2.5rem;
 }
 
 .card .right .meta .item {
